--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   
   <!-- Login Page -->
   <div id="login" class="hidden">
-    <h2>Login</h2>
+    <h2>Enter Your Name</h2>
     <input type="text" id="name" placeholder="Your Name">
-    <input type="email" id="email" placeholder="Your Email">
     <button id="btnLogin">Login</button>
   </div>
   
@@ -28,7 +27,7 @@
     <div id="question-container">
       <div id="question-text"></div>
       <div id="options"></div>
-      <div id="timer">Time: <span id="timeElapsed">0</span>s</div>
+      <div id="timer">Time Left: <span id="timeLeft">15</span>s</div>
       <button id="btnNext">Next</button>
     </div>
   </div>
