--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <!-- Link Admin di halaman landing -->
   <div class="admin-link">
-    <a href="#" id="adminLoginLink" style="color: #ccc; background-color: #333; padding: 5px 10px; border-radius: 5px; text-decoration: none;">Admin</a>
+    <a href="#" id="adminLoginLink">Admin</a>
   </div>
 
   <!-- Halaman Quiz -->
