--- a/index.html
+++ b/index.html
@@ -422,5 +422,6 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/confetti-js/0.0.18/confetti.min.js"></script>
   <script src="script.js"></script>
+  <script src="confetti.min.js"></script>
 </body>
 </html>
